# soma-arm

./: .gitignore  CLAUDE.md  LICENSE  README.md  README_zh.md  pyproject.toml  个人用笔记.md  开发进度与待办事项.md
config/: arm_config.yaml  camera_config.yaml  hand_config.yaml  training_config.yaml
docs/: DEVELOPMENT.md  FAQ-硬件与仿真.md  Windows_ROS相机桥接.md  Windows_TCP相机桥接.md  guide.md  机械臂技术文档.md
scripts/: attach_devices.bat  collect_demos.py  demo_lerobot.py  demo_mediapipe.py  demo_mujoco.py  evaluate_policy.py  lock_c922_params.sh  preview_camera_linux.py  preview_ros_image_stream.py  run_sim.py  run_teleop.py  save_ros_image_frames.py  start_camera_bridge_wsl.sh  train_act.py
scripts/bridge方案/: attach_devices_bridge_mode.bat  camera_bridge_receiver.py  probe_windows_cameras.bat  probe_windows_cameras.py  start_camera_bridge.bat  start_camera_bridge_low_latency_540p.bat  start_camera_ros_publisher.bat  windows_camera_bridge.py  windows_camera_ros_publisher.py
src/anima_node/: package.xml  setup.py
src/anima_node/anima_node/nodes/: anima_core_node.py  skill_executor_node.py
src/anima_node/config/: skills.yaml
src/anima_node/launch/: anima.launch.py
src/arm_bringup/: CMakeLists.txt  package.xml
src/arm_bringup/config/: c922_usb_cam.yaml
src/arm_bringup/launch/: camera_usb.launch.py  full_system.launch.py
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/launch/: display.launch.py  gazebo.launch.py
src/arm_description/urdf/: soma_robot.urdf.xacro
src/arm_description/worlds/: home_simple.sdf
src/arm_driver/: package.xml  setup.py
src/arm_driver/arm_driver/: arm_driver_node.py  moveit_bridge_node.py  roarm_protocol.py
src/arm_driver/launch/: arm_driver.launch.py
src/arm_teleop/: package.xml  setup.cfg  setup.py
src/arm_teleop/arm_teleop/: gamepad_teleop_node.py
src/arm_teleop/launch/: teleop.launch.py
src/pose_estimation/: body_tracker.py  hand_tracker.py  holistic_tracker.py
src/retargeting/: arm_ik.py  combined.py  hand_retarget.py
src/simulation/: arm_env.py  domain_randomization.py  hand_env.py
src/teleoperation/: data_recorder.py  vision_teleop.py
src/training/: act_train.py  evaluate.py
tests/: test_act_train.py  test_arm_ik.py  test_hand_retarget.py  test_simulation.py
