[project]
name = "smart-robot-arm"
version = "0.1.0"
description = "Vision-based gesture teleoperation for robot arm and dexterous hand"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jeff Liu"}]
readme = "README.md"

dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "mediapipe>=0.10",
    "mujoco>=3.0",
    "ikpy>=3.3",
    "torch>=2.0",
    "gymnasium>=0.29",
    "pyyaml>=6.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
lerobot = ["lerobot"]
retargeting = ["dex-retargeting"]
dev = ["ruff", "pytest", "pytest-cov"]
all = ["smart-robot-arm[lerobot,retargeting,dev]"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
