<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>anima_node</name>
  <version>0.1.0</version>
  <description>ANIMA cognitive framework ROS 2 wrapper for SmartRobotArm: NLU + planning + skill execution</description>
  <maintainer email="contact@jeffliulab.com">Jeff Liu Lab</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>py_trees</exec_depend>
  <exec_depend>py_trees_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
