<?xml version="1.0"?>
<package format="3">
  <name>arm_bringup</name>
  <version>0.1.0</version>
  <description>SmartRobotArm system bringup: launches description + ANIMA cognitive layer (perception/manipulation packages added in W2-W3)</description>
  <maintainer email="contact@jeffliulab.com">Jeff Liu Lab</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>arm_description</exec_depend>
  <exec_depend>anima_node</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
