<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_driver</name>
  <version>0.1.0</version>
  <description>USB serial driver for Waveshare RoArm-M2-S, exposed as a ROS 2 node.</description>
  <maintainer email="jeff@jeffliulab.com">Jeff Liu Lab</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>python3-serial</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
